FIXED IT AGAIN.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Made by 8marko on discord</h1>
     <h1>Add me for any reason &lt;3</h1>
   </div>
-  <img id="Silent" src="C:\Users\ahamd\Downloads\Main_files\Media\Images\HTML1.png">
+  <img id="Silent" src="assets/HTML1.png">
   <button id="DarkMode" onmouseover="onHover()" onmouseleave="onLeave()" onclick="onClick()">DM</button>
   <p id="result"></p>
 
