--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button class="button" onclick="calculate()">=</button>
             <button class="button" onclick="addInput('/')">/</button>
             <button class="button" onclick="removeInput()">
-                <img src="assetsTest/backspace.png" alt="Error"></img>
+                <img src="assets/backspace.png" alt="Error"></img>
             </button>
         </div>
     </div>
