--- a/index.html
+++ b/index.html
@@ -1,69 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CalculatorStyle.css">
-    <title>JS Calculator</title>
-</head>
-<body>
-    <div class="buttons">
-        <div id="display">0</div>
-            
-        <div>
-            <button class="button" onclick="addInput('1')">1</button>
-            <button class="button" onclick="addInput('2')">2</button>
-            <button class="button" onclick="addInput('3')">3</button>
-            <button class="button" onclick="addInput('+')">+</button>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>8marko</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <input type="checkbox" id="checkboxInput">
+        <label for="checkboxInput" class="toggleSwitch">
+        </label>
+        <div id="division" class="Font">
+            8marko
         </div>
-
-        <div>
-            <button class="button" onclick="addInput('4')">4</button>
-            <button class="button" onclick="addInput('5')">5</button>
-            <button class="button" onclick="addInput('6')">6</button>
-            <button class="button" onclick="addInput('-')">-</button>
-        </div>
-
-        <div>
-            <button class="button" onclick="addInput('7')">7</button>
-            <button class="button" onclick="addInput('8')">8</button>
-            <button class="button" onclick="addInput('9')">9</button>
-            <button class="button" onclick="addInput('*')">*</button>
-        </div>
-
-        <div>
-            <button class="button" onclick="addInput('0')">0</button>
-            <button class="button" onclick="clearInput()">C</button>
-            <button class="button" onclick="calculate()">=</button>
-            <button class="button" onclick="addInput('/')">/</button>
-            <button class="button" onclick="removeInput()">
-                <img src="assets/backspace.png" alt="Error"></img>
-            </button>
-        </div>
-    </div>
-    <script>
-        let CurrentInput = '';
-        function addInput(value) {
-            CurrentInput += value;
-            document.getElementById("display").textContent = CurrentInput
-        }
-        function calculate() {
-            document.getElementById("display").textContent = eval(CurrentInput).toString();
-            CurrentInput = eval(CurrentInput).toString()
-        }
-        function clearInput() {
-            document.getElementById("display").textContent = '0'
-            CurrentInput = ''
-        }
-        function removeInput() {
-            if (document.getElementById("display").textContent.slice(0, -1)==='') {
-                document.getElementById("display").textContent = 0
-                CurrentInput = CurrentInput.slice(0, -1)
-            } else {
-                document.getElementById("display").textContent = document.getElementById("display").textContent.slice(0, -1)
-                CurrentInput = CurrentInput.slice(0, -1)
-            }
-        }
-    </script>
-</body>
+        <script>
+            let div = document.getElementById('division')
+            document.getElementById('checkboxInput').addEventListener('change', function() {
+                if (this.checked) {
+                    document.body.style.backgroundColor = "black";
+                    div.classList.replace("Font", "FontInvert");
+                } else {
+                    document.body.style.backgroundColor = "white";
+                    div.classList.replace("FontInvert", "Font");
+                }
+            })
+        </script>
+    </body>
 </html>
