--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
         <style>
             body {
                 transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
-                font-family: 'Courier New', Courier, monospace;
+                font-family: sans-serif;
             }
             .title {
                 display: flex;
                 font-size: 64px;
                 justify-content: center;
                 align-content: center;
+                padding: 10px;
             }
             .list {
-                font-size: 25px;
-            }
-            input[type="checkbox"] {
-                cursor: pointer
+                font-size: 50px;
             }
             .progressbar {
                 display: flex;
@@ -66,12 +64,19 @@
             }
             .DelList {
                 cursor: pointer;
+                align-items: center;
+                justify-content: center;
+                height: 30px;
+                width: 30px;
                 border: black;
                 outline: red;
                 background-color: white;
                 transition: background-color 0.3s ease-in-out;
             }
             .DelList:hover {
+                cursor: pointer;
+                align-items: center;
+                justify-self: center;
                 background-color: red;
                 border: black;
                 outline: red;
@@ -82,6 +87,66 @@
                 border: black;
                 outline: red;
                 transition: background-color 0.3s ease-in-out;
+            }
+            .watermark {
+                display: flex;
+                font-size: 25px;
+                position: fixed;
+                padding: 10px;
+                bottom: 0;
+                justify-content: right;
+                color: black;
+                font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                transition: color 0.3s ease-in-out;
+            }
+            .DiscordLogo {
+                display: flex;
+                align-items: flex-end;
+                justify-content: flex-end;
+                position: fixed;
+                bottom: 0;
+                right: 0;
+                padding: 10px;
+                font-size: 25px;
+                color: black;
+                font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, filter 0.3s ease-in-out;
+                cursor: pointer;
+                border-radius: 50%;
+            }
+            .DiscordLogo:hover {
+                transform: scale(1.3);
+                transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, filter 0.3s ease-in-out;
+                border-radius: 50%;
+                filter: drop-shadow(0 0 15px #5865F2);
+            }
+            input[type="checkbox"] {
+                cursor: pointer;
+                align-items: center;
+                justify-content: center;
+                height: 30px;
+                width: 30px;
+            }
+            .VSCode {
+                display: flex;
+                align-items: flex-end;
+                justify-content: flex-end;
+                position: fixed;
+                bottom: 0;
+                right: 50px;
+                padding: 10px;
+                font-size: 25px;
+                color: black;
+                font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+                cursor: pointer;
+                transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, filter 0.3s ease-in-out;
+                border-radius: 50%;
+            }
+            .VSCode:hover {
+                transform: scale(1.3);
+                transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, filter 0.3s ease-in-out;
+                border-radius: 50%;
+                filter: drop-shadow(0 0 15px #007ACC);
             }
         </style>
         <div class="title">
@@ -96,7 +161,19 @@
         <div class="progressbar" id="progressbar">
             0% Happiness
         </div>
+        <div class="watermark" id="watermark">
+            Made by 8marko
+        </div>
+        <div class="VSCode">
+            <img src="assets/VisualStudioCode2.png" height="50px">
+        </div>
+        <div class="DiscordLogo">
+            <img src="assets/ccc0b0bdf4aa0439da61e3e6d78e6bc8.png" height="50px" onclick="discord()">
+        </div>
           <script>
+            function discord() {
+                window.location.href='https://guns.lol/8marko';
+            }
             let Fprcnt = 0;
             function AddList() {
                 let AddListInput = document.getElementById("AddListInput").value;
@@ -119,8 +196,7 @@
                     listitem.remove();
                 }
                 let deleteButton = document.createElement("input");
-                deleteButton.type = "button";
-                deleteButton.value = "X";
+                deleteButton.type = "checkbox";
                 deleteButton.classList.add("DelList");
                 deleteButton.onclick = function () {
                     listitem.remove();
@@ -136,7 +212,7 @@
                 listItems.forEach((item, index) => {
                     const span = item.querySelector("span");
                     const text = span.textContent.split(". ")[1];
-                    span.textContent = (index + 1) + ". " + text;
+                    span.textContent = (index + 1) + ". " + " "+ " " + " " + text;
                 });
             }
 
@@ -152,6 +228,7 @@
                 }
                 document.body.style.backgroundColor = `rgb(${brightness}, ${brightness}, ${brightness})`;
                 document.body.style.color = textColor;
+                document.getElementById("watermark").style.color = textColor;
                 getPercentage();
                 function updateFace() {
                     if (Fprcnt < 50) {
@@ -167,7 +244,7 @@
                 updateFace();
                 document.getElementById("progressbar").textContent = Fprcnt.toFixed(0) + "% Happiness " + Face;
                 if (checkboxes.length === undefined || checkboxes.length === 0) {
-                    document.getElementById("progressbar").textContent = "No happiness, Add something to want.";
+                    document.getElementById("progressbar").textContent = "";
                     document.body.style.backgroundColor = "white";
                     document.body.style.color = "black";
                 }
